--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,8 +11,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  yuya_core:
-    path: ../yuya-core
+  path: ^1.9.0
 
 dev_dependencies:
   flutter_test:
