--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,7 +11,10 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  grpc: ^4.1.0
+  http: ^1.5.0
   path: ^1.9.0
+  protobuf: ^4.2.0
 
 dev_dependencies:
   flutter_test:
